--- a/zarazzaczynamy.html
+++ b/zarazzaczynamy.html
@@ -30,6 +30,7 @@
 </style>
 </head>
 <body>
-    <img class="img" src="zarazzaczynamy2.png" alt="Overlay">
+    <img class="img" src="https://github.com/Gl1tchyBoy11/jakie-zjebanechujoweitemkidostreamowanianakickuitwitchunarazorazmozenatelefonieprzezstreamlaba/blob/main/zarazzaczynamy2.png?raw=true" alt="Overlay">
 </body>
 </html>
+
