--- a/stream-leży.html
+++ b/stream-leży.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
-  <img src="pepe.png">
+  <img src="https://github.com/Gl1tchyBoy11/jakie-zjebanechujoweitemkidostreamowanianakickuitwitchunarazorazmozenatelefonieprzezstreamlaba/blob/main/pepe.png?raw=true">
 </body>
 </html>
+
