--- a/stream-leży.html
+++ b/stream-leży.html
@@ -60,10 +60,16 @@
       width: 20%;
       height: auto;
     }
+    p {
+      font-size: 50px;
+      position: absolute;
+      font-weight: bold;
+      bottom: 20%
+    }
   </style>
 </head>
 <body>
+  <p>Wyrzuciło serwer. Próbuje ponownie połaczyć</p>
   <img src="https://github.com/Gl1tchyBoy11/jakie-zjebanechujoweitemkidostreamowanianakickuitwitchunarazorazmozenatelefonieprzezstreamlaba/blob/main/pepe.png?raw=true">
 </body>
 </html>
-
