--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body{width:35em;margin:0 auto;font-family:Tahoma,Verdana,Arial,sans-serif;}
 </style>
 </head>
 <body>
-<h1>Welcome to Allex's nginx!</h1>
+<h1>Welcome to gc-servers!</h1>
 <p>If you see this page, the gc-web server is successfully installed and
 working. Further configuration is required.</p>
 
