--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-<title>Welcome to GC-SERVERS!</title>
-<style>
-body{width:35em;margin:0 auto;font-family:Tahoma,Verdana,Arial,sans-serif;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Strona w budowie</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            backgroud-image: url("https://github.com/poken12/strona-w-budowie/blob/main/img/background.png?raw=true");
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        .container {
+            padding: 2rem;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        h1 {
+            font-size: 2.5rem;
+            color: #1e3a8a; /* Ciemnoniebieski */
+        }
+        p {
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
+        }
+        .icon {
+            font-size: 4rem;
+            margin-bottom: 1rem;
+        }
+    </style>
 </head>
 <body>
-<h1>Welcome to gc-servers!</h1>
-<p>If you see this page, the gc-web server is successfully installed and
-working. Further configuration is required.</p>
 
-<p><em>Thank you for using gc-servers.</em></p>
-</body></html>
+    <div class="container">
+        <div class="icon">🚧</div>
+        <h1>Strona w trakcie budowy</h1>
+        <p>Pracujemy nad czymś wspaniałym. Zapraszamy wkrótce!</p>
+    </div>
+
+</body>
+</html>
